<resources>
    <string name="self">Self</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="please_enter_your_registered_email_id_or_mobile_number">Please enter your registered Email ID or Mobile number</string>
    <string name="back_to_login">Back to Login</string>
    <string name="send_details">Send Details</string>
    <string name="create_new">Create new Account</string>
    <string name="account">Account</string>
    <string name="already_registered">Already Registered?</string>
    <string name="enter_your_password">Create Password</string>
    <string name="re_type_your_password">Re-type your Password</string>
    <string name="login">Login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="by_continuing_you_agree_with_our_term_and_conditions_and_privacy_policy">By continuing, you agree with our Terms and Conditions and Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="_2022_mobile_prototype_all_rights_reserved">© 2022 Mobile Prototype. All Rights Reserved.</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="enter_confirm_paswword">Enter confirm password</string>
    <string name="specialization_degree">Specialization/Degree</string>
    <string name="description">Description</string>
    <string name="certificate">Certificate</string>
    <string name="notice1_5">"Note: Please use Guardian email id for signing up"</string>
    <string name="cal"><![CDATA[< -]]></string>
    <string name="cal2"><![CDATA[- >]]></string>
    <string name="Complete_Profile"><u>Complete your Profile</u></string>
    <string-array name="role1_array">
        <item>"Select your role"</item>
        <item>"Student"</item>
        <item>"Guardian"</item>
        <item>"Councellor"</item>
    </string-array>
    <string-array name="class_array">
        <item>"Class"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>
    <string-array name="class_1_6_array">
        <item>"Class"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
    </string-array>
    <string-array name="class_9_12_array">
        <item>"Class"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
    </string-array>
    <string-array name="select_subrole">
        <item>"Select your subrole"</item>
    </string-array>
    <string-array name="student_array">
        <item>"Primary (Class 1-5)"</item>
        <item>"Junior (Class 6-8)"</item>
        <item>"Secondary (Class 9-12)"</item>
        <item>"College"</item>
    </string-array>
    <string-array name="guardian_array">
        <item>"Child in(Class 6-8)"</item>
    </string-array>
    <string-array name="counsellor_array">
        <item>"Councellor"</item>
    </string-array>
    <string-array name="gender_array">
        <item>"Select your Gender"</item>
        <item>"Male"</item>
        <item>"Female"</item>
        <item>"Other"</item>
    </string-array>
    <string name="title_activity_exampledash">EXAMPLEDASH</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maindashboard">maindashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_counter">Step Counter</string>
    <string name="step_detector">Step Detector</string>
    <string name="step_Tracker">Step Tracker</string>

    <string name="app_name">Self care</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="categories_string">Categories</string>
    <string name="search_string">Search</string>
    <string name="settings_string">Settings</string>
    <string name="hope_you_are_greate_avtaar__string">Hope you are greate avtaar, </string>
    <string name="let_s_workout_to_get_some_gains___string">Lets workout to get some gains !</string>
    <string name="today_s_workout_string">Todays workout</string>
    <string name="completed___string">completed..</string>
    <string name="_146_string">146</string>
    <string name="completed_workout_plans_string">CompletedWorkout plans</string>
    <string name="_45_00_string">45:00</string>
    <string name="everage_workout_time_string">Everage Workout Time</string>
    <string name="discover_string">Discover</string>
    <string name="diet_plan_string">Diet Plan</string>
    <string name="tech__guides_string">Tech. Guides</string>
    <string name="routine_string">Routine</string>
    <string name="physical_activities_string">Physical Activities</string>
    <string name="___string">></string>
    <string name="___ek1_string">></string>
    <string name="family">Family</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="frienship_tips">Frienship Tips</string>
    <string name="go_ahead">Go Ahead ...</string>
    <string name="FriendshipTips">Friendships are the bedrock of our social support systemsThey help you celebrate good times and provide support during bad times.They prevent isolation and loneliness and give you a chance to offer needed companionship, too.They boost your happiness and reduce your stress by helping you cope up with traumas. Some people find it hard to maintain or develop friendships as it takes effort and some behavioural aspects like give and take.Sometimes you\'re the one giving support, and other times you\'re on the receiving end. Letting friends know you care about them and appreciate them can help strengthen your bond.</string>
    <string name="smiley_text">&#x1F60A;</string>
</resources>