<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient4"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/already_registered"
        android:textColor="#070707"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:onClick="backToLogin"
        android:text="@string/login"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Please select gender. "
        android:textColor="#F3E7E7"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="386dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/button"
        android:onClick="signUp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_new"
        android:textColor="#101010"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336">

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="386dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textPersonName"
            android:padding="7dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="386dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_profile_user_svgrepo_com"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textCapSentences"
            android:padding="7dp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="7dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="386dp"
                android:layout_height="43dp"
                android:id="@+id/password"
                android:background="@drawable/edit_text_border"
                android:backgroundTint="#FFF5F5"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="5dp"
                android:ems="15"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="7dp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="386dp"
                android:layout_height="43dp"
                android:background="@drawable/edit_text_border"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="5dp"
                android:ems="15"
                android:hint="@string/enter_confirm_paswword"
                android:inputType="textPassword"
                android:padding="7dp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="386dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="Enter your Phone number (Optional)"
            android:inputType="number"
            android:padding="7dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="386dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_assignment_ind_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/specialization_degree"
            android:inputType="textCapSentences"
            android:padding="7dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/role1"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.654"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.279"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



    </LinearLayout>


    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_certificate_svgrepo_com"
        android:drawablePadding="5dp"
        android:text="Upload your Certificate    "
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>